--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,13 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>8</java.version>
 	</properties>
+
+	<!-- in do1>
+	<!-<properties>-->
+		<!--<java.version>11</java.version>-->
+	<!--</properties>-->
 
 
 	<dependencies>
